2007-08-21  Jb Evain  <jbevain@novell.com>

	* Makefile: tune on `all`, and only re-installed the tuned
	assemblies on `install`.

2007-08-16  Jb Evain  <jbevain@novell.com>

	* Makefile: re-install in the GAC the tuned assemblies.

2007-08-13  Jb Evain  <jbevain@novell.com>

	* Makefile: tune on net_2_1 install.

2007-08-11  Jb Evain  <jbevain@novell.com>

	* Descriptors/System.xml, Makefile: add a descriptor
	to protect some classes in System.

2007-08-05  Jb Evain  <jbevain@novell.com>

	* Descriptors/smcs.xml, Makefile: add a descriptor
	to protect some classes in smcs.

2007-08-03  Atsushi Enomoto  <atsushi@ximian.com>

	* Makefile : a bit win32 friendly fix.

2007-08-01  Jb Evain  <jbevain@novell.com>

	* Mono.Tuner/CheckVisibilit.cs:
		New debugging step to ensure that the even after
		API tuning the visibility is correct.

2007-07-27  Jb Evain  <jbevain@novell.com>

	* Mono.Tuner/RemoveSerialization.cs:
		Add a new linker step to remove automatically everything
		serialization related.

2007-07-18  Jb Evain  <jbevain@novell.com>

	* tuner: new tool to tune the Mono assemblies from a full 2.1
	profile to a stripped down silverlight compatible assembly set.